<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#ffb74d"
    >

    <!-- given background color over here  and added checkbox and extra textview to show done and undone-->

    <CheckBox
        android:id="@+id/checkStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"

        />

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/toDoDescription" />

    <!--TextView
        android:id="@+id/rishabh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        />-->

    <TextView
        android:id="@+id/foodCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/toDoCategory"/>

    <TextView
        android:id="@+id/dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/dueDate"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#f4511e"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />



</LinearLayout>